--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         </canvas>
         <script src="./script/constants.js"></script>
         <script src="./script/spriteAltas.js"></script>
+        <script src="./script/gameData.js"></script>
         <script src="./script/menu.js"></script>
         <script src="./script/game.js"></script>
         <script src="./script/setup.js"></script>
