--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <script src="./script/soundSetup.js"></script>
         <script src="./script/gameData.js"></script>
         <script src="./script/menu.js"></script>
+        <script src="./script/howTo.js"></script>
+        <script src="./script/results.js"></script>
         <script src="./script/game.js"></script>
         <script src="./script/setup.js"></script>
     </body>
