--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="./script/menu.js"></script>
         <script src="./script/howTo.js"></script>
         <script src="./script/results.js"></script>
+        <script src="./script/start.js"></script>
         <script src="./script/game.js"></script>
         <script src="./script/setup.js"></script>
     </body>
