--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="./script/gameData.js"></script>
         <script src="./script/menu.js"></script>
         <script src="./script/howTo.js"></script>
+        <script src="./script/credits.js"></script>
         <script src="./script/results.js"></script>
         <script src="./script/start.js"></script>
         <script src="./script/game.js"></script>
