--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
         <title></title>
         <link rel="stylesheet" href="style.css">
     </head>
+    <style>
+    	* { padding: 0; margin: 0; }
+      body   { background: rgb(26, 26, 26) }
+      canvas { display: block; margin: 0 auto; cursor: none};
+      img{
+    -khtml-user-select: none;
+    -o-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+    </style>
     <body>
         <canvas id="game">
         </canvas>
